# RFF-2.0-Super

./: .gitignore  CMakeLists.txt  README.md
src/rff2/data/: ApproxTableCache.h
src/rff2/formula/: LightMandelbrotReference.cpp  LightMandelbrotReference.h
src/rff2/mrthy/: LightPAGenerator.h  MPATable.h  SegmentedVector.h  SparseVector.h
src/rff2/ui/: Application.cpp  RenderScene.cpp
